--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-nosql-launchpad.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-nosql-launchpad.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-nosql-launchpad.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-nosql-launchpad.git</url>
     </scm>
     
     <properties>
